--- a/AssistDoc_Mobile/app/src/main/res/layout/activity_sign_in_doctor.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/activity_sign_in_doctor.xml
@@ -58,6 +58,7 @@
         android:layout_marginTop="8dp"
         android:padding="12dp"
         android:textColor="#7D32A8"
+        android:textColorHint="@color/grey"
         android:textSize="14sp"
         app:layout_constraintTop_toBottomOf="@id/welcomeText"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +79,7 @@
         android:padding="12dp"
         android:textColor="#7D32A8"
         android:textSize="14sp"
+        android:textColorHint="@color/grey"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
         app:layout_constraintTop_toBottomOf="@+id/editText2"
