--- a/AssistDoc_Mobile/app/src/main/res/drawable/purple_bg.xml
+++ b/AssistDoc_Mobile/app/src/main/res/drawable/purple_bg.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <solid android:color="@color/basic"/>
+        <solid android:color="#E9C5E5"/>
     <corners  android:radius="10dp"/>
     </shape>
 </item>
