--- a/AssistDoc_Mobile/app/src/main/res/layout/activity_chat.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/activity_chat.xml
@@ -19,6 +19,15 @@
         tools:ignore="MissingConstraints">
 
         <ImageView
+            android:id="@+id/nav_home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="start|center_vertical"
+            android:padding="8dp"
+            android:src="@drawable/baseline_home_24"
+            app:tint="@android:color/white" />
+
+        <ImageView
             android:id="@+id/logoutimg"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
