--- a/AssistDoc_Mobile/app/src/main/res/layout/activity_contact_us.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/activity_contact_us.xml
@@ -20,7 +20,14 @@
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             android:elevation="4dp"
             tools:ignore="MissingConstraints">
-
+            <ImageView
+                android:id="@+id/nav_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:padding="8dp"
+                android:src="@drawable/baseline_home_24"
+                app:tint="@android:color/white" />
             <ImageView
                 android:id="@+id/chat_icon"
                 android:layout_width="wrap_content"
