--- a/AssistDoc_Mobile/app/src/main/res/layout/activity_disease.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/activity_disease.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
-    android:background="@color/white"
+    android:background="@color/lightPurple"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +20,14 @@
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             android:elevation="4dp"
             tools:ignore="MissingConstraints">
-
+            <ImageView
+                android:id="@+id/nav_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:padding="8dp"
+                android:src="@drawable/baseline_home_24"
+                app:tint="@android:color/white" />
             <ImageView
                 android:id="@+id/chat_icon"
                 android:layout_width="wrap_content"
@@ -33,15 +40,16 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="4dp"
-        android:background="@color/lightPurple"
+        android:layout_margin="20dp"
+        android:layout_marginTop="50dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="5dp"
+        android:backgroundTint="#FFDEFB"
         android:layout_gravity="center">
 
-    </androidx.cardview.widget.CardView>
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -53,19 +61,23 @@
             android:id="@+id/card_head"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/bad_script"
             android:gravity="center"
-            android:padding="8dp"
+            android:padding="12dp"
             android:text="Diagnosis"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/disease_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autoLink="web"
-            android:padding="8dp"
+            android:fontFamily="@font/bad_script"
+            android:padding="10dp"
             android:textColor="@android:color/holo_blue_dark"
             android:textSize="16sp" />
     </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
