--- a/AssistDoc_Mobile/app/src/main/res/layout/activity_sign_in.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/activity_sign_in.xml
@@ -42,6 +42,7 @@
         android:fontFamily="sans-serif"
         android:textStyle="italic|bold"
         android:textColor="#7D32A8"
+        android:textColorHint="@color/grey"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/logo"
         app:layout_constraintStart_toStartOf="parent"
@@ -55,6 +56,7 @@
         android:hint="Email"
         android:background="@drawable/edittext_background"
         android:gravity="center"
+        android:textColorHint="@color/grey"
         android:layout_marginTop="8dp"
         android:padding="12dp"
         android:textColor="#7D32A8"
@@ -78,6 +80,7 @@
         android:padding="12dp"
         android:textColor="#7D32A8"
         android:textSize="14sp"
+        android:textColorHint="@color/grey"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/LoginBtn"
         app:layout_constraintTop_toBottomOf="@+id/editText2"
