--- a/AssistDoc_Mobile/app/src/main/res/layout/activity_sign_up.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/activity_sign_up.xml
@@ -70,6 +70,7 @@
         android:hint="Username"
         android:padding="12dp"
         android:textColor="@color/purple"
+        android:textColorHint="@color/grey"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/email_reg"
         app:layout_constraintTop_toBottomOf="@+id/welcomeText"
@@ -86,6 +87,7 @@
         android:background="@drawable/edittext_background"
         android:gravity="center"
         android:hint="Email"
+        android:textColorHint="@color/grey"
         android:inputType="textEmailAddress"
         android:padding="12dp"
         android:textColor="#7D32A8"
@@ -109,6 +111,7 @@
         android:textColor="#7D32A8"
         android:textSize="14sp"
         android:inputType="textPassword"
+        android:textColorHint="@color/grey"
         app:layout_constraintTop_toBottomOf="@+id/email_reg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -120,6 +123,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Re-enter Password"
+        android:textColorHint="@color/grey"
         android:background="@drawable/edittext_background"
         android:gravity="center"
         android:layout_marginTop="8dp"
