--- a/AssistDoc_Mobile/app/src/main/res/layout/activity_symptoms.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/activity_symptoms.xml
@@ -21,7 +21,14 @@
             android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
             android:elevation="4dp"
             tools:ignore="MissingConstraints">
-
+            <ImageView
+                android:id="@+id/nav_home"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="start|center_vertical"
+                android:padding="8dp"
+                android:src="@drawable/baseline_home_24"
+                app:tint="@android:color/white" />
             <ImageView
                 android:id="@+id/chat_icon"
                 android:layout_width="wrap_content"
@@ -40,7 +47,7 @@
         android:fontFamily="sans-serif"
         android:text="@string/title_symptom"
         android:textAlignment="center"
-        android:textColor="#9E000000"
+        android:textColor="#9EFFFFFF"
         android:textSize="24sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="parent"
