--- a/AssistDoc_Mobile/app/src/main/res/layout/appointement_item.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/appointement_item.xml
@@ -1,4 +1,5 @@
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -12,18 +13,22 @@
         android:orientation="vertical"
         android:padding="16dp">
 
+        <!-- Appointment Date -->
         <TextView
             android:id="@+id/appointment_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Appointment Date"
-            android:textStyle="bold"/>
+            android:text="📅 Appointment Date"
+            android:textStyle="bold"
+            android:textSize="16sp" />
 
+        <!-- Appointment Details -->
         <TextView
             android:id="@+id/appointment_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Appointment Details"/>
+            android:text="📝 Appointment Details"
+            android:textSize="14sp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
