--- a/AssistDoc_Mobile/app/src/main/res/layout/home.xml
+++ b/AssistDoc_Mobile/app/src/main/res/layout/home.xml
@@ -31,7 +31,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="36dp"
         android:breakStrategy="high_quality"
-        android:fontFamily="@font/asul"
+        android:fontFamily="serif"
         android:gravity="center"
         android:text="ASSISTDOC Exceptional Care Close to You !"
         android:textColor="@color/white"
